--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* reset styles */
-@import "https://dl.dropboxusercontent.com/u/3191548/site/css/reset.css";
+@import "css/reset.css";
 
 @font-face {
 	font-family: 'Gotham Book';
