--- a/css/preloader.css
+++ b/css/preloader.css
@@ -18,7 +18,7 @@ h2 { font-weight:100; text-shadow:#ffffff 1px 1px 0px; text-align:center; paddin
 
 
 .preloader { 
-              background:url(https://dl.dropboxusercontent.com/u/3191548/site/Images/progressbarloop.gif) center center no-repeat #ffffff; 
+              background:url(Images/progressbarloop.gif) center center no-repeat #ffffff; 
               width: 100%;
               height: 100%;
              /* background:url(images/blankanimation.gif) center center no-repeat #ffffff; */
